test/pass/parse_expr_literals.ms
const num := 42;
const text := "hello";
const flag := true;
const disabled := false;
