test/fail/codegen_decorator_on_non_extern.ms
@link("invalid")
const x := 42;
